<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.14</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.grupo2</groupId>
	<artifactId>app</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>app</name>
	<description>Proyecto de Spring boot de &quot;Bill of Materials&quot; que incluye arboles binarios , utilizacion de OpenAPi y diferentes estrategias de persitencia</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
   			 <groupId>org.springframework.boot</groupId>
    		 <artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.3</version>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>com.grupo2</groupId>
            <artifactId>tree-engine</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
  			<groupId>org.openapitools</groupId>
  			<artifactId>jackson-databind-nullable</artifactId>
  			<version>0.2.6</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
            <plugin>
                 <groupId>org.openapitools</groupId>
    			 <artifactId>openapi-generator-maven-plugin</artifactId>
    			 <version>7.6.0</version>

    		<executions>
        	  <execution>
        	  <id>openapi-generation</id>
              <goals>
                <goal>generate</goal>
              </goals>

              <phase>generate-sources</phase>

              <configuration>

    	  <inputSpec>
        	  ${project.basedir}/src/main/resources/openapi/openapi.yaml
    	  </inputSpec>
    	  
    	  	<output>
    			${project.build.directory}/generated-sources/openapi
  			</output>

    	<generatorName>spring</generatorName>

    	<apiPackage>com.grupo2.app.api</apiPackage>

    	<modelPackage>com.grupo2.app.model</modelPackage>

    	<configOptions>
          <interfaceOnly>true</interfaceOnly>
          <useTags>true</useTags>
          <useSpringBoot3>true</useSpringBoot3>
          <useJakartaEe>true</useJakartaEe>
    	</configOptions>

    	<generateModels>true</generateModels>



		</configuration>
          </execution>
    	</executions>
            </plugin>
            
        <plugin>
    		<groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-compiler-plugin</artifactId>
    		<configuration>
        	<source>17</source>
        	<target>17</target>
    		</configuration>
		</plugin>
		
		<plugin>
    <groupId>org.codehaus.mojo</groupId>
    <artifactId>build-helper-maven-plugin</artifactId>
    
    <executions>
        <execution>
            <phase>generate-sources</phase>
            <goals>
                <goal>add-source</goal>
            </goals>
            <configuration>
                <sources>
                    <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
                </sources>
            </configuration>
        </execution>
    </executions>
</plugin>
	
		
	</plugins>
	</build>
	
	

</project>
